modificado las clases y IDs, se puso igual al video

--- a/index.html
+++ b/index.html
@@ -14,7 +14,22 @@
 </head>
 
 <body>
-    
+    <h2 class="heading">Clock</h2>
+
+    <div class="clock">
+        <!-- hour -->
+        <div class="hour">
+            <div id="hr" class="hr"></div>
+        </div>
+        <!-- minute -->
+        <div class="min">
+            <div id="mn" class="mn"></div>
+        </div>
+        <!-- seconds -->
+        <div class="sec">
+            <div id="sc" class="sc"></div>
+        </div>
+    </div>
 </body>
 
 </html>
